# markovian-mcp

./: README.md  glama.json  pyproject.toml
src/markovian_mcp/: server.py
