[project]
name = "markovian-mcp"
version = "0.1.0"
description = "Bitcoin-anchored, independently verifiable provenance for AI outputs, exposed as MCP tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Markovian Protocol" }]
keywords = ["mcp", "model-context-protocol", "provenance", "bitcoin", "verifiable", "audit"]
dependencies = ["mcp>=1.2.0"]

[project.urls]
Homepage = "https://markovianprotocol.com"
Repository = "https://github.com/MarkovianProtocol/markovian-mcp"

[project.scripts]
markovian-mcp = "markovian_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markovian_mcp"]
